--- a/package.json
+++ b/package.json
@@ -11,15 +11,12 @@
   },
   "devDependencies": {
     "@rollup/plugin-replace": "^5.0.2",
-    "@undecaf/zbar-wasm": "^0.9.12",
     "chrome-types": "^0.1.181",
     "rimraf": "^4.4.1",
     "typescript": "^4.9.3",
-    "vite": "^4.2.0",
-    "vite-plugin-static-copy": "^0.13.1"
+    "vite": "^4.2.0"
   },
   "dependencies": {
-    "@undecaf/barcode-detector-polyfill": "^0.9.15",
-    "zustand": "^4.3.6"
+    "@undecaf/barcode-detector-polyfill": "^0.9.15"
   }
 }
