--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-replace": "^5.0.2",
+    "@types/offscreencanvas": "^2019.7.0",
     "chrome-types": "^0.1.181",
     "rimraf": "^4.4.1",
     "typescript": "^4.9.3",
