--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "devDependencies": {
     "@rollup/plugin-replace": "^5.0.2",
     "@types/offscreencanvas": "^2019.7.0",
-    "chrome-types": "^0.1.181",
+    "chrome-types": "^0.1.183",
     "rimraf": "^4.4.1",
-    "typescript": "^4.9.3",
-    "vite": "^4.2.0"
+    "typescript": "^5.0.4",
+    "vite": "^4.2.1"
   },
   "dependencies": {
-    "@undecaf/barcode-detector-polyfill": "^0.9.15"
+    "@sec-ant/barcode-detector": "^0.0.4",
+    "zustand": "^4.3.7"
   }
 }
