--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Bartender",
   "description": "A tender barcode handler",
   "version": "0.0.1",
-  "permissions": ["contextMenus"],
+  "permissions": ["contextMenus", "storage", "offscreen", "clipboardWrite"],
   "host_permissions": ["<all_urls>"],
   "icons": {
     "16": "logo-bitty.png",
@@ -17,9 +17,14 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
+      "run_at": "document_start",
       "js": ["content-script.js"]
     }
   ],
+  "options_ui": {
+    "page": "options.html",
+    "browser_style": true
+  },
   "content_security_policy": {
     "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'"
   }
