--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Bartender",
-  "description": "A tender barcode handler",
+  "description": "Barcode Tender",
   "version": "0.0.1",
   "permissions": ["contextMenus", "storage", "offscreen", "clipboardWrite"],
   "host_permissions": ["<all_urls>"],
