--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/lodash.debounce": "^4.0.7",
     "@types/offscreencanvas": "^2019.7.0",
     "@types/react": "^18.0.34",
     "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^3.1.0",
     "chrome-types": "^0.1.183",
+    "eslint": "^8.38.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "rimraf": "^5.0.0",
     "typescript": "^5.0.4",
     "vite": "^4.2.1",
@@ -26,6 +32,7 @@
     "@mui/material": "^5.11.16",
     "@resvg/resvg-wasm": "^2.4.1",
     "@sec-ant/barcode-detector": "^0.1.0",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "robust-predicates": "^3.0.1",
