--- a/package.json
+++ b/package.json
@@ -12,26 +12,27 @@
   "devDependencies": {
     "@types/lodash.debounce": "^4.0.7",
     "@types/offscreencanvas": "^2019.7.0",
-    "@types/react": "^18.0.34",
+    "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^3.1.0",
-    "chrome-types": "^0.1.183",
+    "chrome-types": "^0.1.185",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "rimraf": "^5.0.0",
     "typescript": "^5.0.4",
-    "vite": "^4.2.1",
-    "vite-plugin-build": "^0.8.0"
+    "vite": "^4.2.2",
+    "vite-plugin-build": "^0.9.0"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@mui/material": "^5.11.16",
+    "@mui/material": "^5.12.1",
     "@resvg/resvg-wasm": "^2.4.1",
-    "@sec-ant/barcode-detector": "^0.1.0",
+    "@sec-ant/barcode-detector": "^0.1.1",
+    "assert-never": "^1.2.1",
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
