--- a/public/manifest.json
+++ b/public/manifest.json
@@ -27,5 +27,6 @@
   },
   "content_security_policy": {
     "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'"
-  }
+  },
+  "action": {}
 }
