--- a/src/options/tsconfig.json
+++ b/src/options/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../tsconfig.settings.json",
+  "extends": "../../tsconfig.web.json",
   "compilerOptions": {
     "moduleResolution": "node"
   }
