--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../tsconfig.settings.json",
+  "extends": "../tsconfig.web.json",
   "exclude": ["options/**/*"],
   "compilerOptions": {
     "moduleResolution": "nodenext"
