--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "robust-predicates": "^3.0.1",
+    "uuid": "^9.0.0",
     "zustand": "^4.3.7"
   }
 }
