--- a/src/options/tsconfig.json
+++ b/src/options/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "../../tsconfig.web.json",
   "compilerOptions": {
+    "rootDir": "..",
     "moduleResolution": "node"
-  }
+  },
+  "include": ["../**/*"]
 }
