--- a/package.json
+++ b/package.json
@@ -10,20 +10,21 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "@types/chrome": "^0.0.235",
+    "@types/chrome": "^0.0.236",
     "@types/lodash.debounce": "^4.0.7",
+    "@types/node": "^20.1.5",
     "@types/offscreencanvas": "^2019.7.0",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
-    "@typescript-eslint/eslint-plugin": "^5.59.5",
-    "@typescript-eslint/parser": "^5.59.5",
+    "@typescript-eslint/eslint-plugin": "^5.59.6",
+    "@typescript-eslint/parser": "^5.59.6",
     "@vitejs/plugin-react": "^4.0.0",
     "eslint": "^8.40.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "rimraf": "^5.0.0",
     "typescript": "^5.0.4",
-    "vite": "^4.3.5",
+    "vite": "^4.3.7",
     "vite-plugin-build": "^0.9.0"
   },
   "dependencies": {
@@ -31,8 +32,10 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.0",
     "@resvg/resvg-wasm": "^2.4.1",
-    "@sec-ant/barcode-detector": "^0.1.1",
+    "@sec-ant/barcode-detector": "^0.1.2",
+    "@webcomponents/custom-elements": "^1.6.0",
     "assert-never": "^1.2.1",
+    "lit": "^2.7.4",
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
