--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://json.schemastore.org/chrome-manifest",
   "manifest_version": 3,
   "name": "Bartender",
   "description": "Barcode Tender",
@@ -28,5 +29,7 @@
   "content_security_policy": {
     "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'"
   },
-  "action": {}
+  "action": {
+    "default_popup": "popup.html"
+  }
 }
