--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -4,7 +4,7 @@
     "target": "ESNext",
     "useDefineForClassFields": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "types": ["chrome"],
+    "types": ["chrome", "react", "react-dom"],
     "allowJs": false,
     "skipLibCheck": true,
     "esModuleInterop": false,
